Implemented edit child profile.
Part of issue: #16

--- a/ds_medical_care/assets/stylesheets/ChildrenPage.css
+++ b/ds_medical_care/assets/stylesheets/ChildrenPage.css
@@ -6,7 +6,12 @@
   box-shadow: 1px 1px 5px #888888;
 }
 
-.child-profile-image {
+.child-profile-image-container {
   max-height: 170px;
   max-width: 170px;
+}
+
+.child-profile-image {
+  height: 170px;
+  width: 170px;
 }
